--- a/blog3.html
+++ b/blog3.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="theme-color" content="#ff6b8b">
+    <meta name="mobile-web-app-capable" content="yes">
     <title>Prisha - My Kittu | Birthday Story</title>
     <meta name="description" content="A beautiful birthday journey celebrating Prisha - from childhood memories to heartfelt wishes and eternal love">
 
